--- a/Challeng.html
+++ b/Challeng.html
@@ -1,7 +1,7 @@
 <h1> Challenge: Emmet </h1>
 <hr>
 <h3>Example:</h3>
-header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.container>div.navbar-header>button[type=button].navbar.toggle[data-toggle=collapse][data-target=navbar-collapse]>span.sr-only+span.icon-bar*3>a.navbar-brand[href=index.php]>img[src=imgs/logo.png]>div.collapse.navbar-collapse.navbaar-right+ul.nav.navbar-nav>a.link[href=index.html]+li.avtive.link>a[href=login.html]+a.link[herf=registro.html+a.link[href]
+header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.container>div.navbar-header>button[type=button].navbar.toggle[data-toggle=collapse][data-target=navbar-collapse]>span.sr-only+span.icon-bar*3>a.navbar-brand[href=index.php]>img[src=imgs/logo.png]^^div.collapse.navbar-collapse.navbaar-right+ul.nav.navbar-nav>a.link[href=index.html]+li.avtive.link{inicio}>a[href=login.html]{ingresar}^li>a.link[herf=registro.html]{registrarse}^li>a.link[href=contacto.html]{contacto}
 <h3>Result</h3>
 <xmp>
 <header id="header">
