--- a/02-html 4.01.html/07-images.html
+++ b/02-html 4.01.html/07-images.html
@@ -9,9 +9,18 @@
 	
 <h1>imagen</h1>
 
-<img src="foto.jpg" alt="" width="100" height="100" />
+<img src="foto.jpg" alt="" width="100" height="100" /> 
+<p>
+	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad quos saepe vitae aspernatur et veniam voluptas. Non vel, architecto, hic a, quam illo eos eius, obcaecati dignissimos ratione nisi nihil sint rerum corporis reiciendis ullam amet atque nobis quae perferendis. Nostrum fuga iste magni dicta similique in ad eveniet quibusdam! Suscipit et earum quasi adipisci aliquam iure accusamus aliquid ducimus eaque animi repellat placeat impedit facere, possimus excepturi quos architecto a nulla libero? Expedita deserunt omnis, repellendus eos tenetur at minima magnam itaque soluta eaque, quia tempore incidunt magni. Itaque sapiente molestias, impedit exercitationem repellat beatae optio debitis iure minus.
+</p>
 <img src="foto.jpg" alt="" width="100px" height="100px" />
+<p>
+	Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Nam sunt dignissimos neque quia, vitae, quaerat cupiditate praesentium minus esse voluptas nemo. Provident et doloremque, quod nisi itaque, similique ut ducimus laboriosam fugiat excepturi ex nulla pariatur eligendi facere temporibus rerum distinctio eaque explicabo consequuntur atque maxime ipsa sunt. Quae inventore sint consequuntur. Sapiente, inventore, maxime. Amet reprehenderit facere expedita tempora beatae optio enim ipsum? Laboriosam, tempora corporis veritatis ipsa repudiandae vero placeat vel possimus expedita quaerat doloremque accusamus officia amet necessitatibus dolores magni dicta, maxime aliquam consectetur! Optio, vel tempore, quos natus doloribus non facere, est vero veniam nihil, magni.
+</p>
 <img src="foto.jpg" alt="" width="50%" height="50%" />
+<p>
+	Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, in. Hic sit, consequatur, odit, explicabo eveniet quisquam quibusdam tempore tempora velit corrupti praesentium ullam accusamus. Assumenda iusto fugiat, quisquam earum reiciendis a atque animi aut tenetur architecto veniam, quos similique. Sapiente optio alias dignissimos aliquid voluptates velit facilis eum, nesciunt, fugiat id voluptate perferendis delectus dolore saepe dolorem distinctio vel consequuntur iste quis! Ad minus voluptas quam culpa sed officia ex nulla explicabo dolores sunt accusamus, quos iure praesentium tenetur reprehenderit nihil ea laborum iusto aliquam magnam nesciunt, impedit. Fugit sint exercitationem molestiae, doloremque praesentium deleniti quae amet itaque. Ducimus?
+</p>
 
 </body>
 </html>
