lists/imags/tables

--- a/02-html 4.01.html/03-anchors.html
+++ b/02-html 4.01.html/03-anchors.html
@@ -6,34 +6,42 @@
 	<title>Anchors</title>
 </head>
 <body>
-	<h1>Anchors</h1>
-	<a href="https://google.com"  target="_blank"> soy un enlace a google
 
-		
-	<br>
-	<a href="https://github.com/Angy001025/adsi-2231424/blob/main/02-html%204.01.html/01-document.html"  target="_"> enlace repositorio 01-document</a>
-	<br>
-	<p>
-		Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Alias asperiores id fuga dolore architecto modi quisquam incidunt harum aliquid eaque eligendi provident beatae accusantium aut consectetur ullam, animi autem, ad veritatis impedit nisi quia delectus. In eos corrupti, est adipisci quia reiciendis veritatis obcaecati odio impedit placeat harum exercitationem architecto ea maxime sunt consectetur, at ad magnam, dignissimos et aperiam enim, mollitia ducimus! Neque nesciunt illo officiis dolorum itaque facilis animi odio voluptatem natus ducimus nam aliquid, ad exercitationem asperiores distinctio explicabo aperiam adipisci laudantium quod? Voluptatem quae cum reprehenderit vel, eum quasi, illum rem minus, ipsum distinctio maiores ratione!
-	</p>
-	<a href="02-text.html"  target="_blank"> enlace a 02-text.html</a>
-	<br>
-	<p>
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus delectus voluptatum, incidunt nulla iste. Sequi illo id corporis consectetur totam quod, repellat libero nam fugit veniam sit mollitia, delectus voluptas hic doloremque, cumque repellendus dolorum, excepturi? Rerum sint reprehenderit repudiandae a fugiat possimus incidunt voluptates et libero quasi harum, ullam!
-	</p>
-	<a href="file:///C:/Users/USUARIO/Desktop/adsi-2231424/02-html%204.01.html/02-text.html"  target="_blank"> acceso a 02-text.html</a>
-	<br>
-	<p>
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi facere voluptas ratione ea optio aperiam totam mollitia iure atque accusantium vero, excepturi possimus nobis provident laboriosam ad? Et, exercitationem, minus. Laudantium, officia corporis ipsam animi delectus! Dolor omnis nihil libero illum recusandae odit nesciunt voluptatem ipsa dolore aliquid, debitis maxime, sapiente suscipit, ea minima fugit? Enim, magnam perferendis necessitatibus, nulla recusandae architecto earum corporis itaque perspiciatis. Officiis rerum voluptatem id eos, deserunt voluptates sapiente vel minus quam maiores facere, fugiat magni atque voluptatum. Dicta, est. Accusamus facere animi rem architecto! Quia provident non ducimus quisquam! Earum excepturi unde voluptatum nostrum.
-	</p>
-	<a href="file:///C:/Users/USUARIO/Desktop/adsi-2231424/01-emmet.html/01-child.html"  target="_blank"> acceso a 01-child.html</a>
-
-	
-	<p>
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam atque molestiae obcaecati reiciendis perspiciatis nulla incidunt ipsam consectetur optio saepe in consequatur, vitae asperiores quo doloremque debitis autem similique error quia libero! Amet animi eius tempore, consequatur autem possimus quos consequuntur iste, laborum totam alias cupiditate nulla nisi ipsa placeat enim ab harum voluptas libero. Perferendis pariatur quis nam hic, minus ut fugiat officiis. Tempore quam iste voluptate ducimus iure ipsum libero, animi minima incidunt suscipit laboriosam necessitatibus exercitationem itaque quasi esse illum temporibus totam aliquam provident beatae dicta sit quod? Illo, placeat facere quis, eius et officia tempore voluptates.
-	</p>
-	
-
-
+<body>
+    <a name="home"></a>
+    <h2>Google Links</h2>
+    <a href="http://www.google.com" target="_blank">Google</a> |
+    <a href="http://www.youtube.com" target="_blank">Youtube</a> |
+    <a href="https://www.google.com/maps/" target="_blank">Maps</a> |
+    <a href="http://www.gmail.com" target="_blank">Gmail</a>
+    <h2>Anchors</h2>
+    <a href="#introduction">Introduction</a> |
+    <a href="#content">Content</a> |
+    <a href="#final">Final</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Introduction -->
+    <a name="introduction"></a>
+    <h3>INTRODUCTION</h3>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, unde reiciendis molestiae odit laboriosam doloribus dolore voluptatem maxime quidem deleniti.
+    </p>
+    <a href="#home">Go to Anchors</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Content -->
+    <a name="content"></a>
+    <h3>CONTENT</h3>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusamus qui unde doloremque fuga. Quaerat recusandae corporis, nam fugiat vero.
+    </p>
+    <a href="#home">Go to Anchors</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Final -->
+    <a name="final"></a>
+    <h3>FINAL</h3>
+    <p>
+       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum saepe minima odio fuga quas cupiditate repellendus tempora dolor a magnam.
+    </p>
+    <a href="#home">Go to Anchors</a>
+     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
