--- a/02-html 4.01.html/06-list.html
+++ b/02-html 4.01.html/06-list.html
@@ -3,26 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>List</title>
+	<title>List (unordered/ordered)</title>
 </head>
 <body>
 	
-<h1>elementos</h1>
-
+<h1>List unordered</h1>
 <ul>
-  <li>Elemento 1</li>
-  <li>Elemento 2</li>
-  <li>
-    <ol>
-      <li>Elemento 2.1</li>
-      <li>Elemento 2.2</li>
-      ...
-      <li>Elemento 2.N</li>
-    </ol>
-  </li>
-  <li>Elemento 3</li>
-  ...
-  <li>Elemento N</li>
+  <li>FC. Barcelona</li>
+  <li>Real Madrid</li>
+  <li>Real Betis</li>
+  <li>Atlético de Madrid</li>
 </ul>
+<ul>
+  <li>Carnívoro
+    <ul>
+      <li>León</li>
+      <li>Buitre</li>
+      <li>Hiena</li>
+    </ul>
+     </li>
+  <li>Herbívoro
+    <ul>
+      <li>Cabra</li>
+      <li>Vaca</li>
+    </ul>
+  </li>
+  <li>Omnívoro
+    <ul>
+      <li>Oso</li>
+      <li>Urraca</li>
+    </ul>
+  </li>
+</ul>
+<h2>List ordered</h2>
+<ol>
+  <li>Julio</li>
+  <li>Carmen</li>
+  <li>Ignacio</li>
+  <li>Elena</li>
+</ol>
+<ol reversed>
+  <li>Julio</li>
+  <li>Carmen</li>
+  <li>Ignacio</li>
+  <li>Elena</li>
+</ol>
 </body>
 </html>
