--- a/02-html 4.01.html/08-tables.html
+++ b/02-html 4.01.html/08-tables.html
@@ -6,11 +6,8 @@
 	<title>Table</title>
 </head>
 <body>
-	
-<h1>tables</h1>
-
-<table>
-  <tr>
+<table border="1">
+      <tr>
     <td>Fila 1 Columna 1</td>
     <td>Fila 1 Columna 2</td>
     <td>Fila 1 Columna 3</td>
@@ -29,6 +26,46 @@
     <td>Fila 3 Columna 4</td>
   </tr>
 </table>
+
+ <table border="1">
+        <thead>
+            <tr>
+                <th>Fullname</th>
+                <th>Email</th>
+                <th>Username</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jeremias Springfield</td>
+                <td>jeremias@gmail.com</td>
+                <td>jeremias55</td>
+            </tr>
+            <tr>
+                <td>Homero Simpson</td>
+                <td>homero@gmail.com</td>
+                <td>homero33</td>
+            </tr>
+            <tr>
+                <td>Ned Flanders</td>
+                <td>ned@gmail.com</td>
+                <td>nedfla88</td>
+            </tr>
+            <tr>
+                <td>Seymour Skinner</td>
+                <td>sey@gmail.com</td>
+                <td>seymour11</td>
+            </tr>
+            <tr>
+                <td>Apu Nahasapeemapetilon</td>
+                <td>apu@gmail.com</td>
+                <td>apunaha22</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!-- table[border=1]>(thead>tr>th{Title$}*3)+(tbody>tr*5>td{Info$}*3) -->
+
 
 </body>
 </html>
