--- a/02-html 4.01.html/10-struture.html
+++ b/02-html 4.01.html/10-struture.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Link CSS</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<title>Struture</title>
 </head>
 <body>
-	<div class="box">CSS</div>
+	
+<h1>Struture</h1>
+
 </body>
 </html>
