--- a/02-html 4.01.html/09-form.html
+++ b/02-html 4.01.html/09-form.html
@@ -6,8 +6,62 @@
 	<title>Form</title>
 </head>
 <body>
-	
-<h1>Form</h1>
-
+	<form action="" method="post">
+		<fieldset>
+			<legend><h2>Personal Data</h2></legend>
+			<!-- -->
+			<label for="fullname">Fullnaame</label>
+			<input type="text" name="fullname" id="fullname">
+			<br>
+			<!-- -->
+			<label for="passoword">Passoword</label>
+			<input type="passoword" name="passoword" id="passoword">
+			<br>
+			<!-- -->
+			 <label for="photo">Select Photo...</label>
+            <input type="file" id="photo" name="photo">
+			<!-- -->
+			<label for="gender">Gender</label>
+			<select name="gender" id="gender">
+				<option value="select"></option>
+				<option value="f">Female</option>
+				<option value="m">Male</option>
+			</select>
+				<br>
+			<!-- -->
+			<label for="description">Description:</label>
+			<br>
+			<textarea name="description" id="description" cols="30" rows="5"></textarea>
+		</fieldset>
+		<fieldset>
+			<legend><h2>Intitutional Data</h2></legend>
+			<!-- -->
+			<label>Select Program:</label>
+			<br>
+			<label>
+				<input type="radio" name="program">TGO Diesel Engines</label>
+				<br>
+				<label>
+				<input type="radio" name="program">TGO ADSI</label>
+				<br>
+				<label>
+				<input type="radio" name="program">TGO Graphic Desing</label>
+				<br>
+				<!-- -->
+				<label>Select Favorite Subject</label>
+				<br>
+				<input type="checkbox" name="subject">English</label>
+				<br>
+				<label>
+				<input type="checkbox" name="subject">Etics</label>
+				<br>
+				<label>
+				<input type="checkbox" name="subject">Phisical Culture </label>
+				<!-- -->
+				    <input type="submit" value="SEND DATA">
+            <input type="reset" value="RESET DATA">
+            <!--  -->
+		</fieldset>
+	</form>
 </body>
 </html>
