--- a/02-html 4.01.html/10-struture.html
+++ b/02-html 4.01.html/10-struture.html
@@ -6,8 +6,35 @@
 	<title>Struture</title>
 </head>
 <body>
-	
-<h1>Struture</h1>
+    <div class="main">
+        <div class="header">
+            <img src="imags/nnn.jpg" alt="The Simpson">
+            <div class="menu">
+                <a href="#">HOME</a> ||
+                <a href="#">SERVICES</a> ||
+                <a href="#">ABOUT US</a> ||
+                <a href="#">CONTACT US</a> ||
+            </div>
+            <hr>
+        </div>
+        <div class="content">
+            <h1>WELCOME</h1>
+            <img src="imags/Familia_Simpson.png" width="820px">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis odio dolor quia maiores, voluptas fugit voluptatibus aperiam <br> debitis eligendi iusto nam atque et aliquid molestiae excepturi sunt laboriosam sapiente voluptates. Maxime atque provident <br> reiciendis quae a inventore nihil est, culpa quisquam laboriosam voluptates quo? Nulla facilis numquam, hic dolores. <br><br> Labore itaque ratione ut eveniet voluptas recusandae omnis quis possimus debitis quam tempore, quisquam similique, soluta <br> harum fuga est pariatur cum a exercitationem veniam doloribus quibusdam saepe? Quasi minus impedit, id deserunt atque <br> facilis reiciendis, expedita quo voluptate consequuntur harum explicabo autem, nobis pariatur. Pariatur, quo distinctio?
+            </p>
+            <hr>
+        </div>
+        <div class="footer">
+            <p>
+                &copy; All rights reserved 2021
+            </p>
+        </div>
+    </div>
+
+</body>
+</html>
+© 2021 GitHub, Inc.
 
 </body>
 </html>
