--- a/03-html5.html/02-canvas.html
+++ b/03-html5.html/02-canvas.html
@@ -46,6 +46,9 @@
        contxt.arc(60, 60, 60, 0, Math.PI*2, true);
        contxt.closePath();
        contxt.fill();
+       /*Heart - - - - - - - - - */
+       var canvas = document.getElementById('Heart');
+       var contxt = canvas.getContext('2d');
 		/* Text - - - - - - - - - */
         var canvas = document.getElementById('Text');
         var contxt = canvas.getContext('2d');
