--- a/03-html5.html/07-struture.html
+++ b/03-html5.html/07-struture.html
@@ -6,36 +6,33 @@
 	<title>Struture</title>
 </head>
 <body>
-    <div class="main">
-        <div class="header">
-            <img src="imags/nnn.jpg" alt="The Simpson">
-            <div class="menu">
+    <main>
+        <header>
+            <img src="imgs/nnn.jpg" alt="The Simpson">
+            <nav>
                 <a href="#">HOME</a> ||
                 <a href="#">SERVICES</a> ||
                 <a href="#">ABOUT US</a> ||
                 <a href="#">CONTACT US</a> ||
-            </div>
+            </nav>
             <hr>
-        </div>
-        <div class="content">
+        </header>
+        <section>
+            <article>
             <h1>WELCOME</h1>
-            <img src="imags/hippy.jpg" width="820px">
-             <img src="imags/lisa.jpg" width="820px">
+            <img src="imgs/lisa.jpg" width="820px">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis odio dolor quia maiores, voluptas fugit voluptatibus aperiam <br> debitis eligendi iusto nam atque et aliquid molestiae excepturi sunt laboriosam sapiente voluptates. Maxime atque provident <br> reiciendis quae a inventore nihil est, culpa quisquam laboriosam voluptates quo? Nulla facilis numquam, hic dolores. <br><br> Labore itaque ratione ut eveniet voluptas recusandae omnis quis possimus debitis quam tempore, quisquam similique, soluta <br> harum fuga est pariatur cum a exercitationem veniam doloribus quibusdam saepe? Quasi minus impedit, id deserunt atque <br> facilis reiciendis, expedita quo voluptate consequuntur harum explicabo autem, nobis pariatur. Pariatur, quo distinctio?
             </p>
-            <hr>
-        </div>
-        <div class="footer">
+            </article>
+        <hr>
+        </section>
+        <footer>
             <p>
                 &copy; All rights reserved 2021
             </p>
-        </div>
-    </div>
-
-</body>
-</html>
-© 2021 GitHub, Inc.
+        </footer>
+    </main>
 
 </body>
 </html>
