--- a/04-css2.1.html/44-verticalaling.html
+++ b/04-css2.1.html/44-verticalaling.html
@@ -27,9 +27,9 @@
 <body>
     <main>
         <section>
-            <div class="va1"><img src="imgs/icon-help.png" width="80px">Baseline</div>
-            <div class="va2"><img src="imgs/icon-help.png" width="80px">Top</div>
-            <div class="va3"><img src="imgs/icon-help.png" width="80px">Middle</div>
+            <div class="va1"><img src="imgs/help.png" width="80px">Baseline</div>
+            <div class="va2"><img src="imgs/help.png" width="80px">Top</div>
+            <div class="va3"><img src="imgs/help.png" width="80px">Middle</div>
         </section>
     </main>
 </body>
