--- a/05-css3.html/Index.html
+++ b/05-css3.html/Index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <title>Menu</title>
     <link rel="stylesheet" href="css/master.css">
-    <style>
+       <style>
         menu {
             padding-left: 0px;
             margin: 40px auto;
@@ -32,12 +32,16 @@
 </head>
 <body>
     <main>
+        <center>
         <h1>Menu (Files)</h1>
         <menu>
-            <li><a href="01-selectors.html">01- Selectors</a></li>
-            <li><a href="02-borderradius.html">02- Border Radius</a></li>
-            <li><a href="03-boxshandow.html">03- Box Shadow</a></li>
+            <li><a href="01-selectors.html">01-Selectors</a></li>
+            <li><a href="02-borderradius.html">02-BorderRadius</a></li>
+            <li><a href="03-boxshadows.html">03-BoxShadow</a></li>
+            <li><a href="04-ChallengeShadows.html">04-ChallengeShadows</a></li>
+
         </menu>
+    </center>
     </main>
 </body>
-</html>
+</html> 
