--- a/05-css3.html/Index.html
+++ b/05-css3.html/Index.html
@@ -39,6 +39,16 @@
             <li><a href="02-borderradius.html">02-BorderRadius</a></li>
             <li><a href="03-boxshadows.html">03-BoxShadow</a></li>
             <li><a href="04-ChallengeShadows.html">04-ChallengeShadows</a></li>
+             <li><a href="05-borderimage.html">05- Border Image</a></li>
+            <li><a href="06-bgsize.html">06- Background Size</a></li>
+            <li><a href="07-bgmultiples.html">07- Background Multiples</a></li>
+            <li><a href="08-bggradient.html">08- Background Gradient</a></li>
+            <li><a href="09-textshadows.html">09- Text Shadows</a></li>
+            <li><a href="10-webfonts.html">10- Web Fonts</a></li>      
+            <li><a href="11-variables.html">11- Variables</a></li>
+            <li><a href="12-transformations.html">12- Transformations</a></li>  
+            <li><a href="13-transitions.html ">13- Transitions</a></li>  
+
 
         </menu>
     </center>
