--- a/05-css3.html/Index.html
+++ b/05-css3.html/Index.html
@@ -48,6 +48,11 @@
             <li><a href="11-variables.html">11- Variables</a></li>
             <li><a href="12-transformations.html">12- Transformations</a></li>  
             <li><a href="13-transitions.html ">13- Transitions</a></li>  
+             <li><a href="14-animations.html">14- Animations</a></li>
+            <li><a href="15-mediaqueries.html" target="_blank">15- Media Queries</a></li>
+            <li><a href="16-challengeresponsive.html" target="_blank">16- Challenge Responsive</a></li>
+            <li><a href="17-steps.html">17- Steps</a></li>
+            <li><a href="18-parallax.html">18- Parallax</a></li>
 
 
         </menu>
