--- a/05-css3.html/16-challengeresponsive.html
+++ b/05-css3.html/16-challengeresponsive.html
@@ -5,85 +5,186 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Challenge Reponsive</title>
 	<style>
-		*{
-    padding:0px;
-    margin:0px;
-    font-family: century gothic;
-}
-body{
-   background-color: white;
-   margin: 0px;
-}
-main {
-    border: 5.5px solid red;
-    margin: 0px auto;
-    padding: 20px;
-}
-main figure.The-Simpsons{
-    background: url(imgs/logo.jpg) no-repeat center;
-    height: 354px;
-    margin: 0px auto;
-    width: 919px;
-}
-section.Familia{
-    width: 950px;
-    height: 190px;
-    padding-top: 8px;
-    margin: 40px auto;
-    border:pink solid;
-}
-section.Personajes div.p div.Homero{
-    background-image: url(imgs/homero.jpg);
-    border:1px pink solid;
-    text-decoration: none;
-    height: 180px;
-    width: 180px;
-    display: block;
-    text-align: center;
-    font-size: 1.4em;
-    font-weight: bolder;
-    line-height: 75px;
-}
-div.March{
-    border:1px pink solid;
-    background-image: url(imgs/Familia_Simpson.png);
-    height: 420px;
-    width: 610px;
-}
-div.LISA-BART-MAGGI{
-    border:1px pink solid;
-    background-image: url(imgs/3 hermanos.jpg);
-    height: 310px;
-    width: 250px;
+		* {
+			transition: all 0.5s;
+		}
+		body {
+			font: 16px Arial;
+		}
+		main {
+			margin: 0px auto;
+			width: 1280px;
+		}
+		header div.logo {
+			background: url(imgs/logo1.png) no-repeat center;
+			background-size: cover;
+			height: 260px;
+			width: 260px
+		}
+		section.boxes {
+			margin-top: 40px;
+		}
+		section.boxes div {
+			display: inline-block;
+			height: 280px;
+			margin-right: 28px;
+			position: relative;
+			width: 280px;
+		}
+		section.boxes div:first-child {
+			margin-left: 28px;
+		}
+		section.boxes div:last-child {
+			margin-right: 0px;
+		}
+		section.boxes div:nth-child(1n) {
+			background: url(imgs/Familia_Simpson.png) no-repeat center;
+			background-size: cover;
+		}
+		section.boxes div:nth-child(2n) {
+			background: url(imgs/march.png) no-repeat center;
+			background-size: cover;
+		}
+		section.boxes div p {
+			background-color: pink;
+			color: red;
+			bottom: 0px;
+			font-size: 1.4em;
+			height: 20px;
+			margin: 0px;
+			padding: 20px;
+			position: absolute;
+			text-align: center;
+			width: 240px;
+			transition: all 0.4s;
+		}
+		section.boxes div:hover {
+			cursor: pointer;
+		}
+		section.boxes div:hover p {
+			height: 60px;
+		}
+		footer {
+			margin-top: 40px;
+		}
+		footer article {
+			border: 4px dashed pink;
+			height: 280px;
+			position: relative;
+			margin: 50px 28px;
+		}
+		footer article figure {
+			background: url(imgs/homero.jpg) no-repeat;
+			background-size: cover;
+			height: 280px;
+			margin: 0px;
+			width: 280px;
+		}
+		footer article.art1 figure {
+			background-position: right center;
+		}
+		footer article figure,
+		footer article div {
+			display: inline-block;
+			vertical-align: top;
+		}
+		footer article div {
+			margin-left: 28px;
+			width: 600px;
+		}
+		footer article div h2 {
+			color: red;
+			font-size: 2em;
+			margin: 20px 0px;
+		}
+		footer article div p {
+			color: pink;
+			line-height: 1.4em;
+			text-align: justify;
+		}
+		/* - - - - - - - - - - - - - - - - - - - - - */
+		@media (max-width: 1290px) {
+			main {
+				width: 680px;
+			}
+			header div.logo {
+				background-size: 120%;
+			}
+			section.boxes div {
+				margin: 28px;
+			}
+			footer article div {
+				width: 280px;
+			}
+			footer article div h2 {
+				font-size: 1.4em;
+			}
+			footer article div p {
+				overflow: scroll;
+				height: 180px;
+			}
+		}
+		/* - - - - - - - - - - - - - - - - - - - - - */
+		@media (max-width: 690px) {
+			main {
+				width: 480px;
+			}
+			section.boxes div {
+				display: block;
+				margin: 28px auto !important;
+			}
+			footer article {
+				height: 560px;
+				margin: 40px auto;
+				width: 280px;
+			}
+			footer article figure,
+			footer article div {
+				display: block;
+			}
+			footer article div {
+				margin-left: 0px;
+				width: 280px;
+			}
+		}
 	</style>
-	</head>
+</head>
 <body>
-  <main>
-   <figure class="The Simpsons"></figure>
-    <section class="Familia">
-        <div class="Personajes">
-           <div class="Homero"><a href="">Homero</a></div>
-        </div>
-        <div class="P">
-            <div class="March"><a href="">March</a></div>
-        </div>
-        <div class="P">
-            <div class="LISA-BART-MAGGI"><a href="">LISA-BART-MAGGI</a></div>
-        </div>
-    </section> 
-      <div class="Homero"></div>
-           <p>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eveniet, maiores adipisci, debitis officia optio facere odit 
-             temporibus ab ad, nisi enim, veniam eos a consequatur libero facilis molestiae autem? Delectus dolorum quisquam fugiat sequi, sit veritatis molestias blanditiis quas omnis laborum alias nesciunt, harum. Veritatis velit praesentium qui. Commodi autem praesentium consequatur consectetur nesciunt aspernatur quia fuga harum ea, ipsam assumenda repudiandae at, obcaecati, eaque architecto quis, error. Totam soluta sed optio. Maxime corrupti nobis officiis ratione deserunt, aliquam, fugit quas ipsam sit consequuntur sequi, magni temporibus molestiae at pariatur voluptate. Illo, perferendis rem nam id quia consequuntur magnam.
-          </p>
-      </div>
-
-    <div class="March"></div>
-     <p>
-         Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Voluptates nesciunt, vel aliquid eveniet sed a non voluptatum aspernatur accusamus debitis iusto, quasi, vero harum neque, commodi soluta facere hic corporis error! Voluptatem soluta sequi quam totam maiores dolore ipsum perferendis minima unde. Ducimus, obcaecati, necessitatibus. Mollitia ad, ipsa nulla accusamus dolor. Ipsum dolorem numquam, quaerat, mollitia quae animi amet, doloremque quisquam tempore optio consectetur est ipsa, sapiente non laboriosam? Illum sit temporibus aperiam suscipit recusandae molestiae, repellendus enim minus qui cupiditate illo voluptates ut voluptatibus veniam iure ad est rerum, molestias. Saepe nesciunt, cum repellendus non consequatur voluptate. Ipsa, repellendus.
-     </p>
-    </div>
-
- </main>
+	<main>
+		<header>
+			<div class="logo"></div>
+		</header>
+		<section class="boxes">
+			<div class="box1">
+				<p>OPM <small>(season 1)</small></p>
+			</div>
+			<div class="box2">
+				<p>OPM <small>(season 2)</small></p>
+			</div>
+			<div class="box3">
+				<p>OPM <small>(season 3)</small></p>
+			</div>
+		</section>
+		<footer>
+			<article class="art1">
+				<figure></figure>
+				<div class="content">
+					<h2> Homero </h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia aspernatur quam reprehenderit beatae explicabo porro excepturi sunt, totam obcaecati culpa nisi quasi qui earum sint nam. Incidunt repellat sequi recusandae non dolorem, dolor ex minus eius ad veritatis earum, dicta vitae odit laudantium saepe hic et quam nobis maxime quod maiores fugit laboriosam magni amet. Labore laudantium dignissimos, laboriosam quisquam sequi beatae itaque officia quos praesentium distinctio doloremque, aut quae ex, veniam sit eaque accusamus. Sapiente quas quae amet quidem iusto nam ipsum nihil.
+					</p>
+				</div>
+			</article>
+			<article class="art2">
+				<figure></figure>
+				<div class="content">
+					<h2> March </h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia aspernatur quam reprehenderit beatae explicabo porro excepturi sunt, totam obcaecati culpa nisi quasi qui earum sint nam. Incidunt repellat sequi recusandae non dolorem, dolor ex minus eius ad veritatis earum, dicta vitae odit laudantium saepe hic et quam nobis maxime quod maiores fugit laboriosam magni amet. Labore laudantium dignissimos, laboriosam quisquam sequi beatae itaque officia quos praesentium distinctio doloremque, aut quae ex, veniam sit eaque accusamus. Sapiente quas quae amet quidem iusto nam ipsum nihil.
+					</p>
+				</div>
+			</article>
+		</footer>
+	</main>
 </body>
-</html>
+</html> 
