--- a/08-javascrith/index.html
+++ b/08-javascrith/index.html
@@ -24,6 +24,7 @@
                 <li><a href="08-functions.html">08- Funciones</a></li>
                 <li><a href="09-reto-calculator.html">09- Desafío Calculadora </a></li>
                 <li><a href="10-mycalculator.html">10- Mi Calculadora</a></li>
+                <li><a href="11-operadores-arimetica.html">11- Operadores Arimetica</a></li>
             </nav>
         </section>
     </main>
