--- a/08-javascrith/index.html
+++ b/08-javascrith/index.html
@@ -35,6 +35,7 @@
                 <li><a href="19-methods-strings.html">19- Methods Strings</a></li>
                 <li><a href="20-methods-numbers.html">20- Methods Numbers</a></li>
                 <li><a href="21-methods-mathematics.html">21- Methods Mathematics</a></li>
+                <li><a href="22-challeng baloto.html">22- reto baloto</a></li>
 
             </nav>
         </section>
